--- a/day1-pm/video-anomaly-v2.ipynb
+++ b/day1-pm/video-anomaly-v2.ipynb
@@ -123,7 +123,7 @@
       "outputs": [],
       "source": [
         "base_dataset_dir = 'video_dataset'\n",
-        "datafile_url  = 'https://nyp-aicourse.s3-ap-southeast-1.amazonaws.com/datasets/UCSD_Anomaly_Dataset.v1p2.zip'\n",
+        "datafile_url  = 'https://nyp-aicourse.s3-ap-southeast-1.amazonaws.com/aiup/day1-pm/UCSD_Anomaly_Dataset.v1p2.zip'\n",
         "download_data(base_dataset_dir, datafile_url, extract=True, force=False)"
       ]
     },
@@ -519,13 +519,13 @@
       "cell_type": "code",
       "source": [
         "## Uncomment below if GPU is not available for training \n",
-        "# !wget https://nyp-aicourse.s3.ap-southeast-1.amazonaws.com/aiup/day1-pm/train_history.pkl\n",
-        "# !wget https://nyp-aicourse.s3.ap-southeast-1.amazonaws.com/aiup/day1-pm/video_anomaly.model.zip\n",
-        "# !unzip video_anomaly.model.zip \n",
+        "!wget https://nyp-aicourse.s3.ap-southeast-1.amazonaws.com/aiup/day1-pm/train_history.pkl\n",
+        "!wget https://nyp-aicourse.s3.ap-southeast-1.amazonaws.com/aiup/day1-pm/video_anomaly.model.zip\n",
+        "!unzip video_anomaly.model.zip \n",
         "\n",
-        "# import pickle \n",
-        "# history = pickle.load(open(\"train_history.pkl\", \"rb\"))\n",
-        "# conv_ae = tf.keras.models.load_model(\"video_anomaly.model\")"
+        "import pickle \n",
+        "history = pickle.load(open(\"train_history.pkl\", \"rb\"))\n",
+        "conv_ae = tf.keras.models.load_model(\"video_anomaly.model\")"
       ],
       "metadata": {
         "id": "6aPWTW4zuL4R"
