updated with links and exercises

--- a/day1-pm/video_anomaly_exercise_v2.ipynb
+++ b/day1-pm/video_anomaly_exercise_v2.ipynb
@@ -6,7 +6,6 @@
     "colab": {
       "name": "video-anomaly-exercise-v2.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,15 +40,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "SeU5auf1gd11"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/nyp-sit/mindef-ai/blob/main/day1-pm/video-anomaly-exercise-v2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "bYiEfpsSgd11"
       },
       "source": [
@@ -71,8 +61,8 @@
         "id": "1gPhj9otgd12"
       },
       "source": [
-        "!wget -q https://nyp-aicourse.s3-ap-southeast-1.amazonaws.com/codes/dataset_util.py\n",
-        "!wget -q https://nyp-aicourse.s3-ap-southeast-1.amazonaws.com/codes/utils.py"
+        "!wget -q https://raw.githubusercontent.com/nyp-sit/aiup/main/day1-pm/dataset_util.py\n",
+        "!wget -q https://raw.githubusercontent.com/nyp-sit/aiup/main/day1-pm/utils.py"
       ],
       "execution_count": null,
       "outputs": []
@@ -129,7 +119,7 @@
       },
       "source": [
         "base_dataset_dir = 'video_dataset'\n",
-        "datafile_url  = 'https://nyp-aicourse.s3-ap-southeast-1.amazonaws.com/datasets/UCSD_Anomaly_Dataset.v1p2.zip'\n",
+        "datafile_url  = 'https://nyp-aicourse.s3-ap-southeast-1.amazonaws.com/aiup/day1-pm/UCSD_Anomaly_Dataset.v1p2.zip'\n",
         "download_data(base_dataset_dir, datafile_url, extract=True, force=False)\n",
         "\n",
         "base_dataset_dir = 'video_dataset'"
@@ -162,8 +152,8 @@
         "id": "1j2YxcUSgd1_"
       },
       "source": [
-        "# TODO:  modify the code\n",
-        "dataset =  None\n",
+        "# TODO:  Complete the codes (indicated by ???)\n",
+        "dataset =  ???\n",
         "\n",
         "# setup all the relative path\n",
         "root_path = os.path.join(base_dataset_dir, dataset)\n",
@@ -181,20 +171,7 @@
       "source": [
         "### Visualize the Train dataset\n",
         "\n",
-        "**Exercise**\n",
-        "\n",
-        "Complete the codes below to display sample images from the train sample folder \"Train003\". \n",
-        "\n",
-        "<details><summary>Click here for answer</summary>\n",
-        "<br/>\n",
-        "    \n",
-        "```\n",
-        "train_sample_folder = 'Train003' \n",
-        "image_range = (1,9)  # this display image from 1 to 8\n",
-        "image_folder = os.path.join(train_dir, train_sample_folder)\n",
-        "display_images(image_folder, image_range=image_range, max_per_row=4) \n",
-        "```\n",
-        "</details>"
+        "We will show some images from Train003 directory."
       ]
     },
     {
@@ -203,36 +180,10 @@
         "id": "UTI7Zlxhgd2C"
       },
       "source": [
-        "# TODO: complete the code \n",
-        "\n",
-        "train_sample_folder = None\n",
-        "image_range = None  # this display image from 10 to 18\n",
-        "image_folder = None\n",
+        "train_sample_folder = \"Train003\"\n",
+        "image_range = (10, 19)  # this display image from 10 to 18\n",
+        "image_folder = os.path.join(train_dir, train_sample_folder)\n",
         "display_images(image_folder, image_range=image_range, max_per_row=4)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "1mWEN2nWgd2E"
-      },
-      "source": [
-        "We now visualize the image frames as animated gif (like a video)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "XMNJ4dkvgd2E"
-      },
-      "source": [
-        "gif_filename = train_sample_folder + '.gif' \n",
-        "create_gif(image_folder, gif_filename, img_type='tif')\n",
-        "\n",
-        "with open(gif_filename,'rb') as file:\n",
-        "    display(ipyImage(file.read(), format='png'))"
       ],
       "execution_count": null,
       "outputs": []
@@ -276,9 +227,21 @@
         "id": "1DfOaMq6gd2H"
       },
       "source": [
-        "## TODO: Write the coder here, refering to previous lab\n",
+        "## TODO: Complete the codes (indicated by ???) Refer to the previous lab.\n",
         "\n",
-        "\n"
+        "test_sample_folder = ???\n",
+        "image_range = (1,9)  # this display image from 1 to 8\n",
+        "image_folder = os.path.join(test_dir, test_sample_folder)\n",
+        "\n",
+        "display_images(image_folder, image_range=image_range, max_per_row=4)\n",
+        "\n",
+        "gif_filename = train_sample_folder + '.gif' \n",
+        "\n",
+        "# call create_gif() to create a animated gif file\n",
+        "???(image_folder, gif_filename, img_type='tif')\n",
+        "\n",
+        "with open(gif_filename,'rb') as file:\n",
+        "    display(ipyImage(file.read(), format='png'))\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -291,7 +254,11 @@
       "source": [
         "### Prepare Training Dataset\n",
         "\n",
-        "Here we create a Tensorflow dataset suitable for use in training the Autoencoder network later."
+        "Here we create a Tensorflow dataset suitable for use in training the Autoencoder network later.  \n",
+        "\n",
+        "**Exercise** \n",
+        "\n",
+        "Prepare the train dataset with images resized to 100 by 100.\n"
       ]
     },
     {
@@ -300,8 +267,11 @@
         "id": "akw_T5Yygd2J"
       },
       "source": [
-        "IMG_HEIGHT=100\n",
-        "IMG_WIDTH=100\n",
+        "## TODO: Complete the codes (indicated by ???)\n",
+        "\n",
+        "IMG_HEIGHT = ???\n",
+        "IMG_WIDTH = ???\n",
+        "\n",
         "BATCH_SIZE=16\n",
         "\n",
         "train_fileset = os.path.join(train_dir, '*/*.tif')\n",
@@ -364,9 +334,10 @@
         "x = tf.keras.layers.MaxPool2D(pool_size=2)(x)\n",
         "x = tf.keras.layers.Flatten()(x)\n",
         "\n",
-        "## TODO: Modify the code \n",
+        "## TODO: Complete the code below (indicated by ???)\n",
+        "\n",
         "# this is the latent layer\n",
-        "encoded = tf.keras.layers.Dense(??)(x)\n",
+        "encoded = tf.keras.layers.Dense(???)(x)\n",
         "\n",
         "\n",
         "encoder = tf.keras.Model(inputs=[inputs], outputs=[encoded])\n",
@@ -409,13 +380,13 @@
       "source": [
         "**Exercise**\n",
         "\n",
-        "Train the network for 40 epochs.\n",
+        "Train the network for 25 epochs.\n",
         "\n",
         "<details><summary>Click here for answer</summary>\n",
         "<br/>\n",
         "    \n",
         "```\n",
-        "num_epochs = 40\n",
+        "num_epochs = 25\n",
         "\n",
         "history = conv_ae.fit(train_dataset, \n",
         "                      validation_data=test_dataset,\n",
@@ -430,11 +401,11 @@
         "id": "YNRc_1b4gd2Q"
       },
       "source": [
-        "## TODO: Complete the code \n",
+        "## TODO: Complete the codes (indicated by ???) \n",
         "\n",
-        "num_epochs = None\n",
-        "\n",
-        "history = None"
+        "history = conv_ae.fit(train_dataset, \n",
+        "                      validation_data=test_dataset,\n",
+        "                      epochs=???)"
       ],
       "execution_count": null,
       "outputs": []
@@ -489,15 +460,21 @@
         "id": "mBb5OH96gd2U"
       },
       "source": [
-        "## TODO: Complete the code \n",
+        "## TODO: Complete the codes (indicated by ???)\n",
         "\n",
-        "BATCH_SIZE=1\n",
+        "BATCH_SIZE = 1\n",
         "\n",
-        "test_sample_folder = None \n",
+        "test_sample_folder = ???\n",
         "\n",
         "test_fileset = os.path.join(test_dir, test_sample_folder, \"*.tif\")\n",
         "\n",
-        "test_dataset = None \n"
+        "test_dataset = ???\n",
+        "\n",
+        "test_dataset = prepare_dataset(test_fileset,\n",
+        "                               img_height=???, \n",
+        "                               img_width=???, \n",
+        "                               batch_size=BATCH_SIZE,\n",
+        "                               shuffle=False)\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -542,7 +519,7 @@
         "<br/>\n",
         "\n",
         "```\n",
-        "threshold = 4.0\n",
+        "threshold = 3.5\n",
         "identify_anomaly(conv_ae, test_dataset, \"video.gif\", threshold)\n",
         "with open('video.gif','rb') as file:\n",
         "    display(ipyImage(file.read(), format='png'))\n",
@@ -556,8 +533,14 @@
         "id": "8__2KDSEgd2Z"
       },
       "source": [
-        "## TODO: Complete the code \n",
-        "\n"
+        "## TODO: Complete the codes (indicated by ???) \n",
+        "\n",
+        "threshold = ???\n",
+        "\n",
+        "identify_anomaly(conv_ae, test_dataset, \"video.gif\", threshold)\n",
+        "\n",
+        "with open('video.gif','rb') as file:\n",
+        "    display(ipyImage(file.read(), format='png'))"
       ],
       "execution_count": null,
       "outputs": []
