--- a/day1-pm/ids_autoencoder_v3.ipynb
+++ b/day1-pm/ids_autoencoder_v3.ipynb
@@ -18,22 +18,14 @@
       "include_colab_link": true
     },
     "kernelspec": {
-      "display_name": "tf2env",
-      "language": "python",
-      "name": "tf2env"
+      "display_name": "Python 3",
+      "name": "python3"
     },
     "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.7.9"
-    }
+      "name": "python"
+    },
+    "accelerator": "GPU",
+    "gpuClass": "standard"
   },
   "cells": [
     {
@@ -72,7 +64,7 @@
       "source": [
         "!wget -q https://raw.githubusercontent.com/nyp-sit/aiup/main/day1-pm/utils.py"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -145,7 +137,7 @@
         "\n",
         "from utils import *"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
