--- a/day1-pm/ids_autoencoder_v3-solution.ipynb
+++ b/day1-pm/ids_autoencoder_v3-solution.ipynb
@@ -912,7 +912,7 @@
         "# !unzip ids.model.zip \n",
         "\n",
         "# import pickle \n",
-        "# xx = pickle.load(open(\"ids_train_history.pkl\", \"rb\"))\n",
+        "# history = pickle.load(open(\"ids_train_history.pkl\", \"rb\"))\n",
         "# conv_ae = tf.keras.models.load_model(\"ids.model\")"
       ],
       "metadata": {
