--- a/day2-pm/lab3/day2pm_lab3_colab_exercise_v1.ipynb
+++ b/day2-pm/lab3/day2pm_lab3_colab_exercise_v1.ipynb
@@ -77,27 +77,34 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "!wget https://nyp-aicourse.s3-ap-southeast-1.amazonaws.com/aiup/day2-pm/lab3/lab3.zip\n",
+        "!unzip lab3.zip"
+      ],
+      "metadata": {
+        "id": "pFHnX6SAXR-W"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "Lc5B3Ct_exg5",
         "scrolled": true
       },
       "source": [
-        "!pip install wget\n",
-        "!apt-get install sox libsndfile1 ffmpeg\n",
-        "!pip install text-unidecode\n",
-        "!pip install matplotlib>=3.3.2\n",
+        "!apt-get update && apt-get install -y libsndfile1 ffmpeg\n",
+        "!pip install Cython\n",
+        "!pip install nemo_toolkit['all']==1.2\n",
         "!pip install ipywebrtc==0.5.0\n",
-        "\n",
-        "!pip install imageio-ffmpeg\n",
-        "!pip install imageio==2.4.1\n",
-        "\n",
         "!pip install ffmpeg-python\n",
+        "!pip install omegaconf\n",
         "!wget https://nyp-aicourse.s3-ap-southeast-1.amazonaws.com/aiup/day2-pm/lab3/lab3.zip\n",
         "!unzip lab3.zip\n",
         "\n",
         "## Install NeMo\n",
         "BRANCH = 'main'\n",
-        "!python -m pip install git+https://github.com/NVIDIA/NeMo.git@$BRANCH#egg=nemo_toolkit[all]\n",
         "\n",
         "## Grab the config we'll use in this example\n",
         "!mkdir configs\n",
