fixed errors due to version change

--- a/day2-pm/lab3/day2pm_lab3_colab_exercise_v1.ipynb
+++ b/day2-pm/lab3/day2pm_lab3_colab_exercise_v1.ipynb
@@ -77,18 +77,6 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!wget https://nyp-aicourse.s3-ap-southeast-1.amazonaws.com/aiup/day2-pm/lab3/lab3.zip\n",
-        "!unzip lab3.zip"
-      ],
-      "metadata": {
-        "id": "pFHnX6SAXR-W"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "metadata": {
         "id": "Lc5B3Ct_exg5",
         "scrolled": true
@@ -96,7 +84,7 @@
       "source": [
         "!apt-get update && apt-get install -y libsndfile1 ffmpeg\n",
         "!pip install Cython\n",
-        "!pip install nemo_toolkit['all']==1.2\n",
+        "!pip install nemo_toolkit['ASR']\n",
         "!pip install ipywebrtc==0.5.0\n",
         "!pip install ffmpeg-python\n",
         "!pip install omegaconf\n",
