--- a/day1-pm/video-anomaly-v2.ipynb
+++ b/day1-pm/video-anomaly-v2.ipynb
@@ -36,7 +36,8 @@
       "outputs": [],
       "source": [
         "!wget -q https://raw.githubusercontent.com/nyp-sit/aiup/main/day1-pm/dataset_util.py\n",
-        "!wget -q https://raw.githubusercontent.com/nyp-sit/aiup/main/day1-pm/utils.py"
+        "!wget -q https://raw.githubusercontent.com/nyp-sit/aiup/main/day1-pm/utils.py\n",
+        "!apt install -qq axel"
       ]
     },
     {
@@ -45,12 +46,12 @@
         "id": "IghAKNFYaKnI"
       },
       "source": [
-        "# Video Anomaly Detection \n",
-        "                                                             \n",
+        "# Video Anomaly Detection\n",
+        "\n",
         "<center>\n",
         "    <img src=\"https://nyp-aicourse.s3-ap-southeast-1.amazonaws.com/resources/video-anomaly.png\" height=\"267\" width=\"500\" style=\"vertical-align:middle;margin:10px 20px\"/>\n",
         "</center>\n",
-        "                \n",
+        "\n",
         "\n",
         "In this lab, we will build an anomaly detector that can help to detect unusual activities in video frames. We will make use of two sets of videos: one set of videos contains only normal pedestrian traffic, and another set of videos contains anomalous activities, such as someone riding a bicycle or a car moving through the scene. We will train an autoencoder model to learn what is normal pedestrian traffic and then use it to detect unusual activities.\n"
       ]
@@ -88,7 +89,7 @@
         "id": "kg5MSie9aKnN"
       },
       "source": [
-        "## Dataset \n",
+        "## Dataset\n",
         "\n",
         "**UCSD Anomaly Detection Dataset**\n",
         "\n",
@@ -98,7 +99,7 @@
         "\n",
         "- *Peds2*: scenes with pedestrian movement parallel to the camera plane. Contains 16 training video samples and 12 testing video samples.\n",
         "\n",
-        "In this lab, we will use the *Peds1* dataset. In the next lab, you will experiment with *Peds2* dataset. \n",
+        "In this lab, we will use the *Peds1* dataset. In the next lab, you will experiment with *Peds2* dataset.\n",
         "\n",
         "**Note:** The [original dataset](http://www.svcl.ucsd.edu/projects/anomaly/UCSD_Anomaly_Dataset.tar.gz) hosted by University of San Diego (UCSD) contains some corrupted TIF image frames, which causes errors when loaded by the python image libray. The dataset you will be using is the one we have cleaned up to exclude those corrupted images. So be aware if you intend to use the dataset directly downloaded from the UCSD website."
       ]
@@ -111,7 +112,7 @@
       "source": [
         "### Download the Dataset\n",
         "\n",
-        "Run the cells below to download the dataset. After the dataset is downloaded, it will be unzipped to the directory called video_dataset. You can see the `video_dataset` in the file browser in this Jupyter lab IDE. The `video_dataset` directory contains two sub-folders: *UCSDped1* and *UCSDped2*. "
+        "Run the cells below to download the dataset. After the dataset is downloaded, it will be unzipped to the directory called video_dataset. You can see the `video_dataset` in the file browser in this Jupyter lab IDE. The `video_dataset` directory contains two sub-folders: *UCSDped1* and *UCSDped2*."
       ]
     },
     {
@@ -124,7 +125,8 @@
       "source": [
         "base_dataset_dir = 'video_dataset'\n",
         "datafile_url  = 'https://nyp-aicourse.s3-ap-southeast-1.amazonaws.com/aiup/day1-pm/UCSD_Anomaly_Dataset.v1p2.zip'\n",
-        "download_data(base_dataset_dir, datafile_url, extract=True, force=False)"
+        "!axel --quiet $datafile_url\n",
+        "!unzip -q UCSD_Anomaly_Dataset.v1p2.zip -d $base_dataset_dir"
       ]
     },
     {
@@ -133,7 +135,7 @@
         "id": "iU7oGlQ7aKnQ"
       },
       "source": [
-        "We will use the UCSDped1 dataset here. The dataset is split into two subsets: one for training, and one for testing. \n",
+        "We will use the UCSDped1 dataset here. The dataset is split into two subsets: one for training, and one for testing.\n",
         "The training data (consists of 34 video clips) are in Train subfolder. Each clip is in a separate subfolder 'Train001', 'Train002', etc, and each of these subfolders contains 200 image frames.\n",
         "\n",
         "In the code below, we are just setting up all the filepaths to be used later."
@@ -164,9 +166,9 @@
       "source": [
         "### Visualize the Train dataset\n",
         "\n",
-        "Our training set contains only video scenes that are 'normal'. Let's look at a few samples. \n",
+        "Our training set contains only video scenes that are 'normal'. Let's look at a few samples.\n",
         "\n",
-        "You can change the variable `train_sample_folder` to another folder e.g. Train010, Train200, etc. \n",
+        "You can change the variable `train_sample_folder` to another folder e.g. Train010, Train200, etc.\n",
         "\n",
         "The variable `image_range = (1,9)` allows you to view images from 1 to 8 (the left-hand number in the bracket is excluded). Feel free to change the range to view other images."
       ]
@@ -180,7 +182,7 @@
       "outputs": [],
       "source": [
         "# You can change the following train_sample_folder to another folder to view other clips\n",
-        "train_sample_folder = 'Train034' \n",
+        "train_sample_folder = 'Train034'\n",
         "image_range = (1,9)  # this display image from 1 to 8\n",
         "image_folder = os.path.join(train_dir, train_sample_folder)\n",
         "display_images(image_folder, image_range=image_range, max_per_row=4)"
@@ -205,7 +207,7 @@
       },
       "outputs": [],
       "source": [
-        "gif_filename = train_sample_folder + '.gif' \n",
+        "gif_filename = train_sample_folder + '.gif'\n",
         "create_gif(image_folder, gif_filename, img_type='tif')"
       ]
     },
@@ -238,7 +240,7 @@
       "source": [
         "## Visualize the Test dataset\n",
         "\n",
-        "Let us visualize the video frames from the test dataset folder Test001, as an animated gif. You should be able to see some anomalous event (e.g. someone riding a bicycle) in the animated gif you create. "
+        "Let us visualize the video frames from the test dataset folder Test001, as an animated gif. You should be able to see some anomalous event (e.g. someone riding a bicycle) in the animated gif you create."
       ]
     },
     {
@@ -250,10 +252,10 @@
       "outputs": [],
       "source": [
         "# set the test sample folder to folder of Test001 and set the image_folder accordingly\n",
-        "test_sample_folder = 'Test001' \n",
-        "image_folder = os.path.join(test_dir, test_sample_folder) \n",
+        "test_sample_folder = 'Test001'\n",
+        "image_folder = os.path.join(test_dir, test_sample_folder)\n",
         "\n",
-        "gif_filename = test_sample_folder + '.gif' \n",
+        "gif_filename = test_sample_folder + '.gif'\n",
         "create_gif(image_folder, gif_filename, img_type='tif')\n",
         "\n",
         "with open(gif_filename,'rb') as file:\n",
@@ -288,8 +290,8 @@
         "train_fileset = os.path.join(train_dir, '*/*.tif')\n",
         "\n",
         "train_dataset, validation_dataset = prepare_dataset(train_fileset,\n",
-        "                                img_height=IMG_HEIGHT, \n",
-        "                                img_width=IMG_WIDTH, \n",
+        "                                img_height=IMG_HEIGHT,\n",
+        "                                img_width=IMG_WIDTH,\n",
         "                                batch_size=BATCH_SIZE,\n",
         "                                shuffle=True,\n",
         "                                split=True,\n",
@@ -304,7 +306,7 @@
       },
       "outputs": [],
       "source": [
-        "# We have a total of 34 x 200 = 6800 images. \n",
+        "# We have a total of 34 x 200 = 6800 images.\n",
         "# 80% allocated to train set = (0.8 * 6800)/16 = 340 batches\n",
         "# 20% allocated to validation set = (0.2 * 6800)/16 = 85\n",
         "\n",
@@ -324,7 +326,7 @@
         "![autoencoder](https://nyp-aicourse.s3-ap-southeast-1.amazonaws.com/resources/autoencoder.png)\n",
         "\n",
         "\n",
-        "We will first build the Encoder network. In the lecture, we learnt that autoencoder learns the latent representation of the data by having a bottleneck layer, so that it is forced to capture only the most important features that allows it to reconstruct the input. \n",
+        "We will first build the Encoder network. In the lecture, we learnt that autoencoder learns the latent representation of the data by having a bottleneck layer, so that it is forced to capture only the most important features that allows it to reconstruct the input.\n",
         "You can see that as we move deeper into the encoder, the number of neurons typically are getting smaller and is the smallest at the 'latent' layer."
       ]
     },
@@ -353,7 +355,7 @@
         "id": "8ZAbvL6OaKng"
       },
       "source": [
-        "Let's print out the model's summary so that we can see the number of output (think of these as number of neurons) at each layer. As you will observe, our input layer has input shape of 100x100x1 (Note: the last number is the number of channels, and since we dealing with grayscale image, there is only 1 channel). \n",
+        "Let's print out the model's summary so that we can see the number of output (think of these as number of neurons) at each layer. As you will observe, our input layer has input shape of 100x100x1 (Note: the last number is the number of channels, and since we dealing with grayscale image, there is only 1 channel).\n",
         "\n",
         "After the 1st convolutional + maxpooling layer, the number of outputs becomes 48x48x32. This is further reduced after the 2nd convolutional + maxpooling layer, to 22x22x32, and further reduced to 2000  at the latent layer. This means the network is forced to learn to capture the most important 'latent' information in the training data into a mere 2000 neurons. The information captured in this latent layer will then be used by the decoder to reconstruct the original image."
       ]
@@ -465,7 +467,7 @@
         "$$\\frac{1}{m}\\sum_{i=1}^m (\\hat{y}_{i} - y_i)^2$$\n",
         "\n",
         "\n",
-        "where $\\hat{y}$ is the predicted output and $y$ is the actual value. \n",
+        "where $\\hat{y}$ is the predicted output and $y$ is the actual value.\n",
         "\n"
       ]
     },
@@ -477,8 +479,8 @@
       },
       "outputs": [],
       "source": [
-        "conv_ae.compile(loss=tf.keras.losses.MeanSquaredError(), \n",
-        "        optimizer=tf.keras.optimizers.Adam(lr=1e-4, decay=1e-4),\n",
+        "conv_ae.compile(loss=tf.keras.losses.MeanSquaredError(),\n",
+        "        optimizer=tf.keras.optimizers.Adam(lr=1e-4, weight_decay=1e-4),\n",
         "        metrics=['mse'])\n"
       ]
     },
@@ -500,8 +502,8 @@
       "outputs": [],
       "source": [
         "num_epochs = 30\n",
-        " \n",
-        "history = conv_ae.fit(train_dataset, \n",
+        "\n",
+        "history = conv_ae.fit(train_dataset,\n",
         "                  validation_data=validation_dataset,\n",
         "                  epochs=num_epochs)\n"
       ]
@@ -512,18 +514,18 @@
         "id": "roXWu1vJaKnv"
       },
       "source": [
-        "Let's plot the training and validation loss to see how our network progress with the training. "
+        "Let's plot the training and validation loss to see how our network progress with the training."
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "## Uncomment below if GPU is not available for training \n",
-        "!wget https://nyp-aicourse.s3.ap-southeast-1.amazonaws.com/aiup/day1-pm/train_history.pkl\n",
-        "!wget https://nyp-aicourse.s3.ap-southeast-1.amazonaws.com/aiup/day1-pm/video_anomaly.model.zip\n",
-        "!unzip video_anomaly.model.zip \n",
+        "## Uncomment below if GPU is not available for training\n",
+        "!axel --quiet https://nyp-aicourse.s3.ap-southeast-1.amazonaws.com/aiup/day1-pm/train_history.pkl\n",
+        "!axel --quiet https://nyp-aicourse.s3.ap-southeast-1.amazonaws.com/aiup/day1-pm/video_anomaly.model.zip\n",
+        "!unzip video_anomaly.model.zip\n",
         "\n",
-        "import pickle \n",
+        "import pickle\n",
         "history = pickle.load(open(\"train_history.pkl\", \"rb\"))\n",
         "conv_ae = tf.keras.models.load_model(\"video_anomaly.model\")"
       ],
@@ -574,7 +576,7 @@
         "id": "PZK7sVF0aKnz"
       },
       "source": [
-        "Now we will take a 'normal' image from the train set, and see how well the autoencoder reconstructs it. We will plot the original image on the left and the reconstructed image on the right. \n",
+        "Now we will take a 'normal' image from the train set, and see how well the autoencoder reconstructs it. We will plot the original image on the left and the reconstructed image on the right.\n",
         "\n",
         "Here you can see that it can mostly reconstruct the original image (the left)"
       ]
@@ -596,9 +598,9 @@
         "id": "qSdKt7zOaKn1"
       },
       "source": [
-        "Let's look at the 'abnormal' image from the test set where a cart can be seen driving through the walkway.  \n",
+        "Let's look at the 'abnormal' image from the test set where a cart can be seen driving through the walkway.\n",
         "\n",
-        "Since the cart is something that the autoencoder has never seen before, it failed to reconstruct it properly. "
+        "Since the cart is something that the autoencoder has never seen before, it failed to reconstruct it properly."
       ]
     },
     {
@@ -618,9 +620,9 @@
         "id": "6PcUnwdsaKn3"
       },
       "source": [
-        "### Reconstruction Loss \n",
+        "### Reconstruction Loss\n",
         "\n",
-        "Let's us look at how the reconstruction loss varies for each video frame of a test video, when we pass the video frames through the autoencoder. "
+        "Let's us look at how the reconstruction loss varies for each video frame of a test video, when we pass the video frames through the autoencoder."
       ]
     },
     {
@@ -638,8 +640,8 @@
         "test_fileset = os.path.join(test_dir, test_sample_folder, \"*.tif\")\n",
         "\n",
         "test_dataset = prepare_dataset(test_fileset,\n",
-        "                                img_height=IMG_HEIGHT, \n",
-        "                                img_width=IMG_WIDTH, \n",
+        "                                img_height=IMG_HEIGHT,\n",
+        "                                img_width=IMG_WIDTH,\n",
         "                                batch_size=BATCH_SIZE,\n",
         "                                shuffle=False)\n",
         "print(len(list(test_dataset)))"
@@ -653,7 +655,7 @@
       "source": [
         "#### Reconstruction loss over different video frames\n",
         "\n",
-        "The following codes take all the video frames from the test folder and runs through the autoencoder and compute the reconstruction loss and show the reconstruction loss for each frame.  "
+        "The following codes take all the video frames from the test folder and runs through the autoencoder and compute the reconstruction loss and show the reconstruction loss for each frame."
       ]
     },
     {
@@ -677,9 +679,9 @@
       "source": [
         "#### Identification of anomalous object from the video frames\n",
         "\n",
-        "In the codes above, our model can tell which frame is anomalous, but it does not tell us where is the anomaly in the frame. \n",
+        "In the codes above, our model can tell which frame is anomalous, but it does not tell us where is the anomaly in the frame.\n",
         "\n",
-        "Here we use the function `identify_anomaly()` to do that. The function compute the differences of each pixel between original frame and the reconstructed frame (for a total of 200 fames), and by comparing the differences over a patch of 4x4 pixels, and if the difference is above certain threshold, it will mark that patch with red color to signify that it is an anomalous region. \n",
+        "Here we use the function `identify_anomaly()` to do that. The function compute the differences of each pixel between original frame and the reconstructed frame (for a total of 200 fames), and by comparing the differences over a patch of 4x4 pixels, and if the difference is above certain threshold, it will mark that patch with red color to signify that it is an anomalous region.\n",
         "\n",
         "The 200 frames will be displayed as animated gif to better visualize the changes over time.\n",
         "\n"
